# msbuild2ninja

./: .gitignore  CMakeLists.txt
src/: CommandLine.cpp  CommandLine.h  CommonTypes.h  FileUtils.cpp  FileUtils.h  NinjaWriter.cpp  NinjaWriter.h  VariableMap.cpp  VariableMap.h  VcProjectInfo.cpp  VcProjectInfo.h  main.cpp
